[package]
name = "al-1s"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bytes = "1.9.0"
color-backtrace = "0.6.1"
crc32fast = "1.4.2"
crossbeam-epoch = "0.9.18"
ctor = "0.2.9"
fast-async-mutex = "0.6.7"
itertools = "0.13.0"
mimalloc-rust = "0.2.1"
pin-project = "1.1.7"
static_assertions = "1.1.0"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
